Reworked the assignment evaluations Javascript  * Closes #7 - blank grades are no longer calculated  * Added some CSS that helps differenciate blank grades  * Small amount of code cleanup

--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -57,7 +57,7 @@
               <% end %>
 
               <% if found %>
-                <%= text_field_tag 'score', found.points_earned,
+                <%= text_field_tag 'score', found.points_earned_before_type_cast,
                   :points	=> assignment.possible_points,
                   :name		=> 'grade',
                   :id			=> [:s => student.id, :a => assignment.id],
