Minor tweaks to the assignment <-> evaluation workflow  * It is now possible to easily move between assignments and their evaluations  * Added an "Evaluate" button to the edit assignments view.  Closes #17  * Corrected some small issues with the assignment edit page  * Added an integration test for assignments (still a lot of work to do on this)

--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -12,6 +12,7 @@
     <tr><td colspan='0'>
         <%= link_to 'Add Assignment',
           new_assignment_path( :course_term_id => @course_term.id ),
+          :id => "add_assignment",
           :class => 'btn positive' %>
       </td>
     </tr>
