Minor change to allow focus on *any* element, not just an INPUT tag

--- a/app/views/settings/sites/edit.html.erb
+++ b/app/views/settings/sites/edit.html.erb
@@ -9,8 +9,8 @@
     <fieldset>
       <legend>Campus</legend>
 
-      <%= f.label :name, {}, :class => 'req' %>
-		  <%= f.text_field :name %>
+      <%= f.label :name, {}, :class => "req" %>
+		  <%= f.text_field :name, :class => "focus" %>
 			
 	    <div class="spacer">
 		    <%= submit_tag 'Save', :class => 'btn positive' %>
