Added the ability to not show percentages to the student/parent.  This is useful in lower grades or ancillary courses where percentages don't mean much. Closes #14

--- a/app/views/settings/grading_scales/edit.html.erb
+++ b/app/views/settings/grading_scales/edit.html.erb
@@ -10,6 +10,9 @@
       <%= f.label :name, "Grading Scale Name", :class => 'req' %>
       <%= f.text_field :name, :class => "focus" %>
       <br />
+      <%= f.label :name, "Hide Percentages?" %>
+      <%= f.check_box :simple_view %>
+      <br />
       
       <div id='ranges' class='prepend-2 span-13 last'>
         <%= render :partial => 'scale_range', :collection => @scale.scale_ranges %>
