--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,17 @@
   <head>
     <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
     <title><%= StaticData.site_name %> - <%= controller.controller_name.humanize %></title>
-    <%= stylesheet_link_tag 'screen' -%>
-    <%= stylesheet_link_tag 'print', :media => 'print' -%>
-    <!--[if IE]><%= stylesheet_link_tag 'ie' -%><![endif]-->
 
-    <%= stylesheet_link_tag 'menu', 'tabs', 'local' -%>
+    <%= stylesheet_link_tag 'screen', 'menu', 'tabs', 'local', :cache => true -%>
 
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype" -%>
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous" -%>
-    <%= javascript_include_tag 'livepipe', 'tabs', 'slider', 'scal' -%>
-    <%= javascript_include_tag "tablekit" -%>
+
+    <%= javascript_include_tag 'livepipe', 'tabs', 'slider', 'scal', 'tablekit', 'application', :cache => true -%>
     <% javascript_tag do %>
       TableKit.options.rowEvenClass = 'even';
       TableKit.options.rowOddClass = 'odd';
     <% end %>
-    <%= javascript_include_tag "application" -%>
-
 
     <%= @content_for_page_header -%>
 
