--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -1,95 +1,23 @@
-<%# Loop through the gradations and build a table with @students as the ROW
-# and @assignments in the COLUMN.  Along the way we'll also alert the user
-# when there are missing @students or @assignments.
-# TODO: move this functionality into a helper (i.e. skill_grid)%>
 <form id='grade_grid'>
-  <table class='master grade-grid sortable scroll'>
-    <thead>
-      <tr>
-        <th>Score</th>
-        <th>Student Name</th>
-        <% if @assignments.size == 0 then %>
-          <th>No Assignments Found</th>
-        <% else %>
-          <% for assignment in @assignments %>
-            <th width='50' class='grade nosort' id='<%= assignment.id %>'>
-              <div class='assign-name'>
-                <%= link_to assignment.name, edit_assignment_path(assignment.id) %>
-              </div>
-              <div class='assign-points'>
-                <%= link_to_function assignment.possible_points,
-                  "$$('[id*=a#{assignment.id}]').each(function(g) { g.value = #{assignment.possible_points}; g.onchange(); });" %>
-                pts</div>
-              <div class='assign-date'><%= h assignment.due_date ? assignment.due_date.to_s(:due_date) : '.' %></div>
-            </th>
-          <% end %>
-        <% end %>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% counter = 0 %>
-
-      <% if @students.size == 0 then %>
-        <tr><td>No Students Found</td></tr>
-      <% end %>
-
-      <% @students.each do |student| %>
-        <tr class="calc <%= cycle('odd', 'even') %>" id='s<%= student.id %>'>
-          <td class='score'>0.0</td>
-          <%= content_tag :td, student.full_name, :id => student.id %>
-          <% a_counter = counter + 1 %>
-
-          <% for assignment in @assignments %>
-            <td class='grades'>
-              <%# found = nil %>
-
-              <%# number_of_gradations = student.assignment_evaluations.size %>
-              <%# 0.upto(number_of_gradations-1) do |index| %>
-                <%# if assignment.id == student.assignment_evaluations[index].assignment_id %>
-                  <%# found = student.assignment_evaluations[index] %>
-                  <%# break %>
-                <%# end %>
-              <%# end %>
-
-              <% found = student.assignment_evaluations.select{|a| a.assignment_id == assignment.id}.first %>
-
-              <% if found %>
-                <%= text_field_tag 'score', found.points_earned,
-                  :points   => assignment.possible_points,
-                  :name     => 'grade',
-                  :id       => [:s => student.id, :a => assignment.id],
-                  :tabindex => a_counter,
-                  :onchange => remote_function( :url => {:action => :update_grade},
-                  :with     => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value",
-                  :loading  => "Element.show('spinner')",
-                  :complete => "Element.hide('spinner')"),
-                  :size     => '10' %>
-              <% else %>
-                <%= text_field_tag 'score', '',
-                  :points   => assignment.possible_points,
-                  :name     => 'grade',
-                  :id       => [:s => student.id, :a => assignment.id],
-                  :tabindex => a_counter,
-                  :onchange => remote_function( :url => {:action => :update_grade},
-                  :with     => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value",
-                  :loading  => "Element.show('spinner')",
-                  :complete => "Element.hide('spinner')"),
-                  :size     => '10' %>
-              <% end %>
-
-            </td>
-            <% a_counter += @students.size %>
-          <% end %>
-
-  <%# Clean up the HTML if no @assignments are found in the DB %>
-          <% if @assignments.size < 1 then -%>
-            <td class='grades'>&nbsp;</td>
-          <% end -%>
-
-        </tr>
-        <% counter += 1 %>
-      <% end %>
-    </tbody>
+  <table class='master grade-grid grade-grid-header'>
+    <thead><%= grades_header %></thead>
   </table>
+
+  <div style="height: 500px; overflow:auto;">
+    <table class='master grade-grid'>
+      <tbody>
+        <%= grades_body %>
+      </tbody>
+    </table>
+  </div>
 </form>
+
+<span class="paginate">
+  <%= will_paginate @assignments %>
+</span>
+
+<% javascript_tag do %>
+  // Load the grade display helpers
+  <%= render :partial => 'grade_display.js' %>
+  $('grade_grid').getInputs().each(grade_status);
+<% end %>
