--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
+<!DOCTYPE html>
+<html lang='en'>
   <head>
-    <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
+    <meta charset='UTF-8'>
     <title><%= StaticData.site_name %> - <%= controller.controller_name.humanize %></title>
 
     <%= stylesheet_link_tag 'screen', 'menu', 'tabs', 'local', :cache => true -%>
