--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -76,7 +76,7 @@ table.master {
 .skill-name {font-size: 0.9em; text-align:left;}
 table.grade-grid { table-layout:fixed; width:100%; }
 table.grade-grid-header { width: 98%; margin-bottom: -1px;}
-/*.grade-grid tbody { height:500px; overflow:auto; }*/
+.grades { text-align:right; }
 
 
 
