--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype" -%>
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous" -%>
 
-    <%= javascript_include_tag 'livepipe', 'tabs', 'slider', 'scal', 'tablekit', 'application', :cache => true -%>
+    <%= javascript_include_tag 'livepipe', 'tabs', 'scal', 'tablekit', 'application', :cache => true -%>
     <% javascript_tag do %>
       TableKit.options.rowEvenClass = 'even';
       TableKit.options.rowOddClass = 'odd';
