Changed layout to better accomidate longer assignment names

--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -12,7 +12,7 @@
 </ul>
 
 <div id="assignments"><%= render :partial => "grades" %></div>
-<div id="skills" class="hidden"><%= render :partial => "skills" %></div>
+<div id="skills" class="hidden"><%#= render :partial => "skills" %></div>
 <div id="comments" class="hidden"><%#= render :partial => "comments" %></div>
 
 <% content_for :page_footer do %>
