--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -1,10 +1,10 @@
 <form id='grade_grid'>
-  <table class='master grade-grid grade-grid-header'>
+  <table style="table-layout:fixed;" class='master grade-grid grade-grid-header'>
     <thead><%= grades_header %></thead>
   </table>
 
   <div style="height: 500px; overflow:auto;">
-    <table class='master grade-grid'>
+    <table style="table-layout:fixed;" class='master grade-grid'>
       <tbody>
         <%= grades_body %>
       </tbody>
