--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -75,8 +75,8 @@ table.master {
 .assign-date {font-size: 0.8em;}
 .skill-name {font-size: 0.9em; text-align:left;}
 table.grade-grid { table-layout:fixed; width:100%; }
-table.grade-grid-header { width: 98%; margin-bottom: -1px;}
-.grades { text-align:right; }
+table.grade-grid-header { width: 98%; margin-bottom: -1px; padding:0px;}
+.grades { text-align:center; }
 
 
 
