Minor layout chnages  * Modified the pagination labels to say "Newer" and "Older" instead of "Previous" and "Next"  * Corrected the sort order for assignments

--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -13,7 +13,10 @@
 </form>
 
 <span class="paginate">
-  <%= will_paginate @assignments %>
+  <%= will_paginate @assignments,
+    :previous_label => '« Newer',
+    :next_label     => 'Older »',
+    :separator      => '&nbsp;&nbsp;' %>
 </span>
 
 <% javascript_tag do %>
