--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,12 @@
 
         <div class='span-2'><img class='top' src='/images/logo.png' alt="logo" width='60px' height='60px' /></div>
 
+        <% cache 'layout_header' do %>
         <div class='span-12'>
           <span class='title last'><%= StaticData.site_name %></span>
           <span class='tagline column span-12'><%= StaticData.tag_line %></span>
         </div>
+        <% end %>
 
         <div id='account-info' class='span-7 push-2 last'>
           <% if !current_user %>
