--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -14,13 +14,21 @@
 
 <span class="paginate">
   <%= will_paginate @assignments,
+    :name           => 'assignments',
     :previous_label => '« Newer',
     :next_label     => 'Older »',
     :separator      => '&nbsp;&nbsp;' %>
 </span>
 
 <% javascript_tag do %>
-  // Load the grade display helpers
-  <%= render :partial => 'grade_display.js' %>
+  // Update the status of each grade
   $('grade_grid').getInputs().each(grade_status);
+
+  // Set up the keyboard controls for this form
+  <%= render :partial => 'form_control.js' %>
+
 <% end %>
+
+<%#= javascript_include_tag 'pagination' %>
+
+
