Make the "account info" section a bit bigger

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         </div>
         <% end %>
 
-        <div id='account-info' class='span-7 push-2 last'>
+        <div id='account-info' class='span-9 last'>
           <% if !current_user %>
             <span>Welcome</span> |
             <span><%= link_to " log in ", login_path %></span>
