--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -17,6 +17,7 @@ body {background: #FFF url("/images/header-bg.gif") top left repeat-x;}
   background-color:#EFF7FF;
   padding:4px;
   text-align: center;
+  font-size: 14px;
 }
 .container .error, .container .notice, .container .warning {padding:0em;margin-bottom:1.1em;border:2px solid #ddd;}
 .container .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
