Evaluations screen re-work:  * The tabs now work correctly  * Pagination now works correctly  * Skills tab needs more work  * Comments tab doesn't work at all

--- a/app/views/evaluations/_assignments.html.erb
+++ b/app/views/evaluations/_assignments.html.erb
@@ -14,16 +14,18 @@
 
 <span class="paginate" id="assignments_pagination" name="assignments">
   <%= will_paginate @assignments,
+    :renderer       => 'RemoteLinkRenderer',
+    :remote         => {:update => 'assignments', :loading => "show_message('assignments');"},
     :previous_label => '« Newer',
     :next_label     => 'Older »',
     :separator      => '&nbsp;&nbsp;' %>
 </span>
 
 <% javascript_tag do %>
-  <%#= render :partial => 'grade_display.js' %>
+  <%= render :partial => 'grade_display.js' %>
 
   // Update the status of each grade
-  //$('grade_grid').getInputs().each(grade_status);
+  //$('grade_grid').getInputs().each(cell_status);
 
   window.processPage('assignments');
 <% end %>
