--- a/app/views/evaluations/_comments.html.erb
+++ b/app/views/evaluations/_comments.html.erb
@@ -10,6 +10,4 @@
   </table>
 </form>
 
-<% javascript_tag do %>
-  this.processPage('comments');
-<% end %>
+<%= javascript_tag do this.processPage('comments'); %>
