--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -46,14 +46,14 @@
     if (container.empty()) {$('tab_' + container.id).onclick();}}
     });
 
+
     // Center the "loading" animation
     element = $('loading');
     var offsets = document.viewport.getScrollOffsets();
-
     var centerX = document.viewport.getWidth() / 2 + offsets.left - element.getWidth() / 2;
     var centerY = 200;
-
     element.setStyle( { position: 'absolute', top: Math.floor(centerY) + 'px', left: Math.floor(centerX) + 'px' } );
+
 
     // Let the user know what's going on
     function show_message(data){
@@ -61,11 +61,8 @@
     $('loading').show();
     }
 
-    // Load the grade display helpers
-    <%#= render :partial => 'grade_display.js' %>
+    // Load the form controls
     <%= render :partial => 'form_control.js' %>
 
   <% end %>
 <% end %>
-
-    <div id="stinky"></div>
