--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -64,5 +64,7 @@
     // Load the form controls
     <%= render :partial => 'form_control.js' %>
 
+    // Lode the display enhancements
+    <%= render :partial => 'display.js' %>
   <% end %>
 <% end %>
