--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -5,12 +5,12 @@
 <ul id="evaluations" class="subsection_tabs">
   <li class="tab"><a href="#assignments">Assignments</a></li>
   <li class="tab"><a href="#skills">Supporting Skills</a></li>
-  <li class="tab"><a class="hidden" href="#comments">Comments</a></li>
+  <li class="tab"><a href="#comments">Comments</a></li>
 </ul>
 
 <div id="assignments"></div>
 <div id="skills"></div>
-<div id="comments" class="hidden"></div>
+<div id="comments"></div>
 
 <%= link_to_remote '', { :update => "assignments",
   :method => "get",
